# openg4-core

./: CMakeLists.txt  main.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  Materials.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
macros/: vis.mac
output/: merge_logs.py
src/: ActionInitialization.cc  DetectorConstruction.cc  Materials.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
